feat(upgrade): 增加统一下载文件接口
